<resources>
    <string name="app_name">AlarmArmy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_edit">Edit alarm</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="colon">:</string>
    <string name="repeat">Repeat</string>

    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>

    <!--Result messages-->
    <string name="result_zero_time">Time can\'t be zero</string>

    <string name="no_repeat">Only once</string>
    <string name="repeat_every_day">Every day</string>

</resources>