<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="alarm"
            type="com.sillyapps.alarmarmy.data.Alarm"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/alarm_item_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:textSize="@dimen/bigFont"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:time="@{alarm.time}"
            tools:text="9:20" />

        <ToggleButton
            android:id="@+id/mondayButton"
            style="@style/LittleToggleButton"
            android:layout_width="@dimen/littleButtonSize"
            android:layout_height="@dimen/littleButtonSize"

            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"

            android:layout_marginBottom="32dp"

            android:checked="@{alarm.repeatMonday}"
            android:textOff="@string/monday"
            android:textOn="@string/monday"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tuesdayButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ToggleButton
            android:id="@+id/tuesdayButton"
            style="@style/LittleToggleButton"
            android:layout_width="@dimen/littleButtonSize"
            android:layout_height="@dimen/littleButtonSize"

            android:layout_marginStart="8dp"
            android:checked="@{alarm.repeatTuesday}"

            android:textOff="@string/tuesday"

            android:textOn="@string/tuesday"
            app:layout_constraintEnd_toStartOf="@+id/wednesdayButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mondayButton"
            app:layout_constraintTop_toTopOf="@+id/mondayButton" />

        <ToggleButton
            android:id="@+id/wednesdayButton"
            style="@style/LittleToggleButton"
            android:layout_width="@dimen/littleButtonSize"
            android:layout_height="@dimen/littleButtonSize"

            android:layout_marginStart="8dp"
            android:checked="@{alarm.repeatWednesday}"

            android:textOff="@string/wednesday"

            android:textOn="@string/wednesday"
            app:layout_constraintEnd_toStartOf="@+id/thursdayButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tuesdayButton"
            app:layout_constraintTop_toTopOf="@+id/mondayButton" />

        <ToggleButton
            android:id="@+id/thursdayButton"
            style="@style/LittleToggleButton"
            android:layout_width="@dimen/littleButtonSize"
            android:layout_height="@dimen/littleButtonSize"

            android:layout_marginStart="8dp"
            android:checked="@{alarm.repeatThursday}"

            android:textOff="@string/thursday"

            android:textOn="@string/thursday"
            app:layout_constraintEnd_toStartOf="@+id/fridayButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/wednesdayButton"
            app:layout_constraintTop_toTopOf="@+id/mondayButton" />

        <ToggleButton
            android:id="@+id/fridayButton"
            style="@style/LittleToggleButton"
            android:layout_width="@dimen/littleButtonSize"
            android:layout_height="@dimen/littleButtonSize"

            android:layout_marginStart="8dp"
            android:checked="@{alarm.repeatFriday}"

            android:textOff="@string/friday"

            android:textOn="@string/friday"
            app:layout_constraintEnd_toStartOf="@+id/saturdayButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/thursdayButton"
            app:layout_constraintTop_toTopOf="@+id/mondayButton" />

        <ToggleButton
            android:id="@+id/saturdayButton"
            style="@style/LittleToggleButton"
            android:layout_width="@dimen/littleButtonSize"
            android:layout_height="@dimen/littleButtonSize"

            android:layout_marginStart="8dp"
            android:checked="@{alarm.repeatSaturday}"

            android:textOff="@string/saturday"

            android:textOn="@string/saturday"
            app:layout_constraintEnd_toStartOf="@+id/sundayButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fridayButton"
            app:layout_constraintTop_toTopOf="@+id/mondayButton" />

        <ToggleButton
            android:id="@+id/sundayButton"
            style="@style/LittleToggleButton"
            android:layout_width="@dimen/littleButtonSize"
            android:layout_height="@dimen/littleButtonSize"

            android:layout_marginStart="8dp"

            android:checked="@{alarm.repeatSaturday}"

            android:textOff="@string/sunday"
            android:textOn="@string/sunday"
            app:layout_constraintStart_toEndOf="@+id/saturdayButton"
            app:layout_constraintTop_toTopOf="@+id/mondayButton" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:checked="@{alarm.active}"
            android:scaleX="1.4"

            android:scaleY="1.4"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            tools:checked="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
